Add a notebook on Dimensionality Reduction trhough PCA

--- a/notebooks/RegressionProject.ipynb
+++ b/notebooks/RegressionProject.ipynb
@@ -135,6 +135,8 @@
     "# Hypothesize \n",
     "features = legendre\n",
     "p = 11\n",
+    "\n",
+    "# Generate features\n",
     "X = features(t, p)\n",
     "\n",
     "# Cross-validation\n",
